objects/ASI_CRM_WS_Inv_History__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WS</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>WS Inventory</relationshipLabel>
        <relationshipName>WS_Inventory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_End_Date__c</fullName>
        <label>Month End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_Month__c</fullName>
        <label>Month</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Volume_BTL__c</fullName>
        <label>Volume (BTL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Volume_CR12__c</fullName>
        <label>Volume (CR12)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Volume_STD_Billing__c</fullName>
        <label>Volume (STD Billing)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Volume_STD__c</fullName>
        <label>Volume (STD BTL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Volume__c</fullName>
        <label>Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>WS Inventory</label>
    <listViews>
        <fullName>ASI_CRM_CN_WS_Inventory</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Account__c</columns>
        <columns>ASI_CRM_Month__c</columns>
        <columns>ASI_CRM_Year__c</columns>
        <columns>ASI_CRM_End_Date__c</columns>
        <columns>ASI_CRM_Volume__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_WS_Inv_History__c.ASI_CRM_CN_WS_Inventory</value>
        </filters>
        <label>CN WS Inventory</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>INV-{00000000}</displayFormat>
        <label>WS Inventory ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WS Inventory</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_WS_Inventory</fullName>
        <active>true</active>
        <label>CN WS Inventory</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>